# GEN-AI

./: .gitignore  Dockerfile  agentic_rag.ipynb  agentic_tool.ipynb  app.py  app_streamlit.py  config.py  get_embedding_function.py  ingest_science_from_urls.py  langgraph_rag.py  mcp-config.json  mcp-demo.ipynb  multimodal_rag.ipynb  populate_database.py  pyproject.toml  requirements.txt  streamlit_frontend.py  ui.py
gpt-chatbot/: chatbot.py  config.env  utils.py
pages/: civics.py  history.py
product_description_app/: config.py
quick_chatbot/: ask_me_finance.py
semantic_search_app/: main.py  qa.py  vector_search.py
