[project]
name = "chatbot-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.0.15",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.0.10",
    "langchain-ollama>=0.3.5",
    "langchain-openai>=0.3.28",
    "playwright>=1.53.0",
    "pypdf>=5.8.0",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "streamlit>=1.47.0",
    "unstructured>=0.18.9",
]
